Issue #2906534 by daniel.bosen: Fix teaser image alignment

--- a/sass/backend.scss
+++ b/sass/backend.scss
@@ -11,11 +11,13 @@
   z-index: 1000;
 }
 
-fieldset.article-teaser .fieldset-wrapper .field--name-field-teaser-text {
-  padding: 0 10px;
+.article-teaser {
+  .field--name-field-teaser-text {
+    padding: 0 10px;
+  }
 }
 
-fieldset.article-teaser {
+.article-teaser {
   .field--name-field-teaser-media {
     summary {
       display: none;
@@ -28,7 +30,7 @@ fieldset.article-teaser {
 
   .field--name-field-teaser-text {
     textarea {
-      height: 114px;
+      height: 122px;
     }
   }
 
@@ -36,8 +38,8 @@ fieldset.article-teaser {
     div.field--widget-entity-browser-entity-reference div.entities-list > div {
       margin: 10px 0;
     }
-
-    .fieldset-wrapper {
+    > .details-wrapper,
+    > .fieldset-wrapper {
       display: flex;
 
       .field--name-field-teaser-media {
